--- a/products/templates/categories.html
+++ b/products/templates/categories.html
@@ -54,7 +54,7 @@
                       </div>
                   </td>
                   <td>
-                    <a class="btn btn-info" role="button" href="#">
+                    <a class="btn btn-info" role="button" href="{% url 'products_by_category' category.slug category.id %}">
                       Ver Productos
                     </a>
                   </td>
