--- a/products/templates/products_by_subcategory.html
+++ b/products/templates/products_by_subcategory.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% load static %}
-{% block title %}Todos los productos{% endblock %}
+{% block title %}Productos {{subcategory.name}}{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-12">
@@ -8,7 +8,7 @@
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
           <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-            <h6 class="text-white text-capitalize ps-3">Todos los productos</h6>
+            <h6 class="text-white text-capitalize ps-3"> Productos {{subcategory.category}} - {{subcategory.name}}</h6>
           </div>
         </div>
         <div class="card-body px-0 pb-2">
@@ -108,14 +108,14 @@
       </div>
       {% else %}
       <div class="alert alert-danger alert-dismissible text-white">
-          <span class="text-sm">No hay Productos</span>
+          <span class="text-sm">No hay Subproductos</span>
         </div>
       {% endif %}
       
     </div>
     <div class="col-6">
         <a href="{% url 'products_create' %}" role="button" class="btn btn-primary  btn-lg w-100">
-            Crear Producto
+            Crear Subproducto
       </a>
     </div>
   </div>
