--- a/products/templates/registration/login.html
+++ b/products/templates/registration/login.html
@@ -20,6 +20,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="{% static './assets/css/material-dashboard.css'%}?v=3.0.2" rel="stylesheet" />
+  {% if request.user.is_authenticated %}
+    <script>window.location.href = '/';</script>
+  {% endif %}
 </head>
 
 <body class="bg-gray-200">
@@ -32,21 +35,21 @@
             <div class="card z-index-0 fadeIn3 fadeInBottom">
               <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign in</h4>
+                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Iniciar sesión</h4>
                 </div>
               </div>
               <div class="card-body">
-                <form role="form" class="text-start">
+                <form  method="post" action="" class="text-start">{% csrf_token %}
                   <div class="input-group input-group-outline my-3">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-control">
+                    <label class="form-label">Usuario</label>
+                    <input type="text" class="form-control" name="username" autofocus maxlength="254" required id="id_username">
                   </div>
                   <div class="input-group input-group-outline mb-3">
-                    <label class="form-label">Password</label>
-                    <input type="password" class="form-control">
+                    <label class="form-label">Contraseña</label>
+                    <input type="password" name="password" required id="id_password" class="form-control">
                   </div>
                   <div class="text-center">
-                    <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+                    <button type="submit"  class="btn bg-gradient-primary w-100 my-4 mb-2">Iniciar sesión</button>
                   </div>
                 </form>
               </div>
