--- a/products/templates/subcategories.html
+++ b/products/templates/subcategories.html
@@ -3,6 +3,33 @@
 {% block title %}Subcategorías{% endblock %}
 {% block content %}
 <div class="row">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+          <span class="material-icons">
+            keyboard_arrow_left
+          </span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      {% endif %}
+      {% for page in page_obj.paginator.page_range %}
+      <li class="page-item"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+      {% endfor %}
+      {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+          <span class="material-icons">
+            keyboard_arrow_right
+          </span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
     <div class="col-12">
         {% if subcategories %}
       <div class="card my-4">
