--- a/products/templates/forms/category-update-form.html
+++ b/products/templates/forms/category-update-form.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row justify-content-md-center">
     <div class="col-12">
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
@@ -13,17 +13,16 @@
             <h6 class="text-white text-capitalize ps-3">Editar {{category.name}}</h6>
           </div>
         </div>
-        <div class="card-body px-0 pb-2">
+        <div class="card-body">
             <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
-                {{form.as_p}}
-                <!--div class="input-group input-group-outline my-3">
-                  <label class="form-label">Email</label>
-                  <input type="email" class="form-control">
-                </div>
-                <div class="input-group input-group-outline mb-3">
-                  <label class="form-label">Password</label>
-                  <input type="password" class="form-control">
-                </div-->
+              <label class="form-label">Nombre</label>
+              <div class="input-group input-group-outline my-3">
+                {{form.name}}
+              </div>
+              <div class="input-group input-group-static mb-4">
+                <label for="exampleFormControlSelect1" class="ms-0">Status</label>
+                {{form.status}}
+              </div>
                 <div class="text-center">
                   <button type="submit" class="btn bg-gradient-primary w-50 my-4 mb-2">Actializar {{category.name}}</button>
                 </div>
