--- a/products/templates/forms/product-form.html
+++ b/products/templates/forms/product-form.html
@@ -13,17 +13,46 @@
             <h6 class="text-white text-capitalize ps-3">Crear Producto</h6>
           </div>
         </div>
-        <div class="card-body px-0 pb-2">
+        <div class="card-body">
             <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
-                {{form.as_p}}
-                <!--div class="input-group input-group-outline my-3">
-                  <label class="form-label">Email</label>
-                  <input type="email" class="form-control">
+              <div class="row">
+                <div class="col-md-6">
+                  <label class="form-label">Nombre</label>
+                  {{form.name}}
                 </div>
-                <div class="input-group input-group-outline mb-3">
-                  <label class="form-label">Password</label>
-                  <input type="password" class="form-control">
-                </div-->
+                <div class="col-md-6">
+                  <label class="form-label">Cantidad</label>
+                  {{form.quantity}}
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Precio</label>
+                  {{form.price}}
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Inpuestos</label>
+                  {{form.taxs}}
+                </div>
+                <div class="col-md-6">
+                  <div class="input-group input-group-static mb-4">
+                    <label class="ms-0">Categoría</label>
+                    {{form.category}}
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="input-group input-group-static mb-4">
+                    <label class="ms-0">Subcategoría</label>
+                    {{form.subcategory}}
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <label class="form-label">Descripción</label>
+                  {{form.description}}
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Codígo</label>
+                  {{form.code}}
+                </div>
+              </div>
                 <div class="text-center">
                   <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Crear Producto</button>
                 </div>
