--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -48,7 +48,7 @@
         <li class="nav-item">
           <a class="nav-link text-white  {% if request.path == '/categorias/' %} active bg-gradient-primary {% endif %}" href="{% url 'categories_list' %}">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
+              <i class="material-icons opacity-10">category</i>
             </div>
             <span class="nav-link-text ms-1">Categorías</span>
           </a>
