--- a/products/templates/forms/product-form.html
+++ b/products/templates/forms/product-form.html
@@ -44,6 +44,12 @@
                     {{form.subcategory}}
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <div class="input-group input-group-static mb-4">
+                    <label class="ms-0">Marca</label>
+                    {{form.brand}}
+                  </div>
+                </div>
                 <div class="col-md-12">
                   <label class="form-label">Descripción</label>
                   {{form.description}}
@@ -51,6 +57,10 @@
                 <div class="col-md-6">
                   <label class="form-label">Codígo</label>
                   {{form.code}}
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Status</label>
+                  {{form.status}}
                 </div>
               </div>
                 <div class="text-center">
