--- a/products/templates/categories.html
+++ b/products/templates/categories.html
@@ -69,7 +69,7 @@
                           {% if category.subcatories %}
                             {% for subcategory  in category.subcatories %}
                             <li class="nav-item">
-                              <a class="nav-link mb-0 px-0 py-1 active" data-bs-toggle="tab" href="#" role="tab" aria-controls="profile" aria-selected="true">
+                              <a class="nav-link mb-0 px-0 py-1 active" style="padding: inherit;display: contents;" data-bs-toggle="tab" href="#" role="tab" aria-controls="profile" aria-selected="true">
                                 {{subcategory.name}}
                               </a>
                             </li>
