--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -35,7 +35,7 @@
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main" style="height: auto">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white {% if request.path == '/' %} active bg-gradient-primary {% endif %}" href="{% url 'index' %}">
