--- a/products/templates/forms/product-form.html
+++ b/products/templates/forms/product-form.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="col-md-6">
                   <div class="input-group input-group-static mb-4">
-                    <label class="ms-0">Categoría</label>
-                    {{form.category}}
+                    <label class="ms-0">Tag</label>
+                    {{form.tag}}
                   </div>
                 </div>
                 <div class="col-md-6">
