--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -44,8 +44,7 @@
               <thead>
                 <tr>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nombre</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Categoría</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Subategoría</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Tag</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Marca</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Cantidad</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Precio</th>
@@ -68,7 +67,7 @@
                   <td>
                     <div class="d-flex px-2 py-1">
                       <div class="d-flex flex-column justify-content-center">
-                        <h6 class="mb-0 text-sm">{{product.category.name |capfirst}}</h6>
+                        <h6 class="mb-0 text-sm">{{product.tag.name |capfirst}}</h6>
                       </div>
                     </div>
                   </td>
