--- a/products/templates/forms/tag-delete.html
+++ b/products/templates/forms/tag-delete.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% load static %}
 
-{% block title %}Editar {{category.name}}{% endblock %}
+{% block title %}Editar {{tag.name}}{% endblock %}
 
 {% block content %}
 
@@ -10,13 +10,13 @@
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
           <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-            <h6 class="text-white text-capitalize ps-3">Editar {{category.name}}</h6>
+            <h6 class="text-white text-capitalize ps-3">Editar {{tag.name}}</h6>
           </div>
         </div>
         <div class="card-body px-0 pb-2">
             <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
                 <div class="text-center">
-                    <p>¿Estás seguro de que quieres borrar <b>"{{category.name}}"</b>?</p>
+                    <p>¿Estás seguro de que quieres borrar <b>"{{tag.name}}"</b>?</p>
                 </div>
                 <div class="text-center">
                   <button type="submit" class="btn bg-gradient-primary w-50 my-4 mb-2">Borrar </button>
