--- a/products/templates/forms/tag-form.html
+++ b/products/templates/forms/tag-form.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% load static %}
 
-{% block title %}Editar {{category.name}}{% endblock %}
+{% block title %}Crear Tag{% endblock %}
 
 {% block content %}
 
@@ -10,13 +10,13 @@
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
           <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-            <h6 class="text-white text-capitalize ps-3">Editar {{category.name}}</h6>
+            <h6 class="text-white text-capitalize ps-3">Crear Tag</h6>
           </div>
         </div>
         <div class="card-body">
             <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
-              <label class="form-label">Nombre</label>
               <div class="input-group input-group-outline my-3">
+                <label class="form-label">Nombre</label>
                 {{form.name}}
               </div>
               <div class="input-group input-group-static mb-4">
@@ -24,7 +24,7 @@
                 {{form.status}}
               </div>
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-50 my-4 mb-2">Actializar {{category.name}}</button>
+                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Crear Tag</button>
                 </div>
               </form>
         </div>
