--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -108,7 +108,9 @@
                   <td>
                     <div class="d-flex px-2 py-1">
                       <div class="d-flex flex-column justify-content-center">
-                        <h6 class="mb-0 text-sm"> $ {{product.final_price}}</h6>
+                          <span class="badge badge-sm bg-gradient-primary">
+                            $ {{product.final_price}}
+                          </span>
                       </div>
                     </div>
                   </td>
