Crear las vistas de cambiar precios

--- a/products/templates/dashboard.html
+++ b/products/templates/dashboard.html
@@ -18,6 +18,9 @@
             <div class="col-md-4">
                 <a href="{% url 'change_iva_by_brand' %}" class="btn btn-info btn-lg">Cambiar IVA por Marca</a>
             </div>
+            <div class="col-md-4">
+                <a href="{% url 'upload_file' %}" class="btn btn-info btn-lg">Subir Archivo</a>
+            </div>
         </div>
     </div>
 </div>
