--- a/products/templates/upgradates/change_price_by_tags.html
+++ b/products/templates/upgradates/change_price_by_tags.html
@@ -7,19 +7,20 @@
     <div class="container d-flex justify-content-center aling-items-center h-100">
         <div class="row">
             <div class="col">
-                <form>
-                    <div class="input-group input-group-static mb-4">
+                <form action="" method="post" enctype='multipart/form-data'>{% csrf_token %}
+                    <!--div class="input-group input-group-static mb-4">
                         <label for="exampleFormControlSelect1" class="ms-0">Tags</label>
                         <select class="form-control" id="exampleFormControlSelect1">
                             {% for tag in tags %}
-                            <option>{{ tag.name }}</option>
+                            <option vuale ={{tag.id}}>{{ tag.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     <div class="input-group input-group-outline my-3">
                         <label class="form-label">Precio</label>
                         <input type="number" class="form-control">
-                    </div>
+                    </div-->
+                    {{form.as_p}}
                     <div class="text-center">
                         <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Actualizar</button>
                       </div>
