--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -99,7 +99,7 @@
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md pe-md-3 d-flex align-items-center">
             <div class="input-group input-group-outline">
-              <form method="POST" action="{%url 'all_products_list'%}"> 
+              <form method="POST" action="{%url 'results'%}"> 
                 <div class="form-inline my-2 my-lg-2"> {% csrf_token %}
                   <input class="" type="text" autocomplete="off" name="buscar" placeholder="Buscar"> 
                 </div>
